Main process auth (rough)

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "electron-store": "^10.1.0",
     "pg": "^8.16.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
