--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:react dev:electron",
     "dev:react": "vite",
-    "dev:electron": "npm run transpile:electron; electron .",
+    "dev:electron": "npm run transpile:electron && electron .",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "transpile:electron": "tsc --project src/electron/tsconfig.json",
     "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64",
     "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64",
-    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
+    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64",
+    "makemigrations": "drizzle-kit generate && drizzle-kit migrate",
+    "reset-db": "docker exec -it sts-postgres psql -U postgres -c \"DROP DATABASE IF EXISTS \\\"sts-manager\\\";\" && docker exec -it sts-postgres psql -U postgres -c \"CREATE DATABASE \\\"sts-manager\\\";\" && npm run makemigrations"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -23,7 +25,8 @@
     "electron-store": "^10.1.0",
     "pg": "^8.16.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
