--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "reset-db": "docker exec -it sts-postgres psql -U postgres -c \"DROP DATABASE IF EXISTS \\\"sts-manager\\\";\" && docker exec -it sts-postgres psql -U postgres -c \"CREATE DATABASE \\\"sts-manager\\\";\" && npm run makemigrations"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "electron-store": "^10.1.0",
+    "lucide-react": "^0.522.0",
     "pg": "^8.16.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.2",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.6.2",
+    "tailwindcss": "^4.1.10",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
